# email_sender

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/config/: __init__.py  settings.py
app/domain/: email.py
app/domain/services/: __init__.py  mailer_service.py
app/infra/: __init__.py  async_smtp_mailer.py
